<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.lazeebear.parkhere.Account">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/accountName_account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/account_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/account_profile_picture"
                    android:layout_width="33dp"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:scaleType="centerCrop"/>

                <Button
                    android:id="@+id/logoutButton_acount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Log out" />
                <Button
                    android:id="@+id/contactCS_button_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_label"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/account_change_profile_pic_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_profile_pic_button"/>
            </LinearLayout>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"
                android:theme="@style/RatingBar"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="phoneNumber" />

                <EditText
                    android:id="@+id/phoneNumberEditText_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="New phone number"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/confirmPhoneNumberButton_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm" />

                <Button
                    android:id="@+id/editPhoneNumberButton_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit" />
            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="email" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Type : " />

                <TextView
                    android:id="@+id/userType_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="type" />

                <Button
                    android:id="@+id/editUserTypeButton_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="edit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/editUserTypeSpinner_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/user_types" />

                <Button
                    android:id="@+id/confirmUserTypeButton_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchSpotButton_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="01"
                    android:text="Search A Spot" />

                <Button
                    android:id="@+id/createSpotButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Create A Spot" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/spotHistoryButton_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Spots History" />

                <Button
                    android:id="@+id/ownedSpotsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Spots Owned" />
            </LinearLayout>
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_public_profile_button"
            android:id="@+id/toggleButton_account"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Reservations"
            android:id="@+id/currentReservationsButton"/>
    </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/account_edit_address_button"
                android:text="Edit Addresses"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spotList_label"
                android:text="Choose the spot's address"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/account_select_address"
                android:hint="@string/prompt_choose_address">
            </Spinner>
            <LinearLayout
                android:id="@+id/spotList_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>